--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1>Look at DevTools</h1>
     <script src="dist/bundle.js"></script>
-    <script src="http://api.flickr.com/services/feeds/photos_public.gne?format=json&jsoncallback=RequestHandler.parseJSON"></script>
+    <script src="configs/mimeTypes.js"></script>
 </body>
 </html>
